--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 </head>
+
 <body>
     <h1>URL shortener</h1>
-    <form action="" method="POST">
+    <form action="/shortUrls" method="POST" class="my-4 form-inline">
         <label for="fullUrl">URL</label>
-        <input type="url" name="fullUrl" id="fullUrl"/>
-        <button type="submit">Shrink</button>
+        <input required placeholder="URL" type="url" name="fullUrl" class="form-control col mr-2" id="fullUrl" />
+        <button class="btn btn-success" type="submit">Shrink</button>
     </form>
-    <table>
+    <table class="table table-striped table-responsive">
         <thead>
             <tr>
                 <th>Full URL</th>
@@ -23,13 +26,22 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><a href="https://google.com">Google</a></td>
-                <td><a href="/1234">1234</a></td>
-                <td>10</td>
-            </tr>
-    
+            <%shortUrls.foreach(shortUrl=>{%>})
+                <tr>
+                    <td><a href="<%=shortUrl.full%>">
+                            <%=shortUrl.full%>
+                        </a></td>
+                    <td><a href="<%=shortUrl.short%>">
+                            <%=shortUrl.short%>
+                        </a>
+                    </td>
+                    <td>
+                        <%=shortUrl.clicks%>
+                    </td>
+                </tr>
+
         </tbody>
     </table>
 </body>
+
 </html>
